Fixed font size to correct elements alignment

--- a/www/theme.css
+++ b/www/theme.css
@@ -1292,7 +1292,7 @@ i.icon-l{
 .asset-details .row:first-of-type{
   background-color: #fcfcfc;
   border-bottom: 1px solid #e9e9e9;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bolder;
 }
 
